# surface_cut

./: CMakeLists.txt  README.en.md  README.md
src/: main.cpp  main.h
src/basic/: macro.h  typedef.h
src/basic/data structure/: memory_pool.h
src/basic/geometrical predicates/: predicates_wrapper.h
src/basic/math/: vector3.h
src/pipeline/mesh fix/: triangle_soup_surface_mesh_normal_fix.cpp  triangle_soup_surface_mesh_normal_fix.h
src/pipeline/run pipeline/: TriIntersectionTri.cpp  TriIntersectionTri.h  run_pipeline.cpp  run_pipeline.h
src/proxy/geogram/: geogram_proxy.cpp  geogram_proxy.h
src/utils/csv/: rapidcsv.h
src/utils/file/: file_path.cpp  file_path.h
src/utils/log/: logger.cpp  logger.h
src/utils/mesh loader/: mesh_loader.cpp  mesh_loader.h
src/utils/opencl-warpper/: kernel_warpper.cpp
third/CGAL/include/CGAL/SMDS_3/: tet_soup_to_c3t3.h
third/geogram/: CMakeLists.txt  cmake_install.cmake  cmake_uninstall.cmake  configure.bat  geogram1.pc  geogram_gfx1.pc  make_package.pl
third/geogram/doc/: cmake_install.cmake
third/geogram/src/examples/: cmake_install.cmake
third/geogram/src/examples/geogram/: cmake_install.cmake
third/geogram/src/examples/graphics/: cmake_install.cmake
third/geogram/src/lib/geogram/: cmake_install.cmake  version.h
third/geogram/src/lib/geogram_gfx/: cmake_install.cmake
third/geogram/src/tests/: cmake_install.cmake
third/geogram/src/tests/bench_load/: cmake_install.cmake
third/geogram/src/tests/test_CDT_2d/: cmake_install.cmake
third/geogram/src/tests/test_HLBFGS/: cmake_install.cmake
third/geogram/src/tests/test_RVC/: cmake_install.cmake
third/geogram/src/tests/test_convex_cell/: cmake_install.cmake
third/geogram/src/tests/test_expansion_nt/: cmake_install.cmake
third/geogram/src/tests/test_locks/: cmake_install.cmake
third/geogram/src/tests/test_logger/: cmake_install.cmake
third/geogram/src/tests/test_nn_search/: cmake_install.cmake
third/geogram/tests/: cmake_install.cmake  testenv.bat
(+22 files in other folders)
